changed seamless integration on contact page to correct vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -1658,7 +1658,6 @@ html {
     }
     
     .connection-bridge {
-        transform: rotate(90deg);
         min-width: auto;
     }
     
